# sarvaja

./: .dsm_state.json  .env.example  .gitignore  .mcp-backup.json  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  =2.0.1  CHANGELOG.md  CLAUDE.md  Dockerfile.mcp  LICENSE  Makefile  README.md  ROADMAP.md  TODO.md  agents.yaml  api_err.txt  api_error.txt  dashboard_err.txt  deploy.ps1  docker-compose.yml  package.json  pyproject.toml  pytest.ini  pytest_output.txt  pytest_result.txt  requirements-test.txt  requirements.txt  test_results.txt
agent/: Dockerfile  Dockerfile.dashboard  agent_trust.py  agent_trust_compliance.py  agent_trust_models.py  dashboard_watcher.py  e2e_explorer.py  e2e_heuristics.py  external_mcp_tools.py  governance_dashboard.py  governance_dashboard_layout.py  hybrid_vectordb.py  journey_analyzer.py  journey_patterns.py  mcp_tools.py  playground.py  playground_orchestrator.py  pyproject.toml  rule_impact.py  rule_impact_graph.py  rule_impact_models.py  rule_impact_scoring.py  rule_monitor.py  rule_monitor_models.py  rule_monitor_stats.py  run_governance_server.py  session_viewer.py  session_viewer_content.py  session_viewer_nav.py  sync_agent.py  task_ui.py  task_ui_models.py  trame_ui.py
agent/external_mcp/: __init__.py  combined.py  common.py  desktop_commander.py  octocode.py  playwright.py  powershell.py
agent/governance_ui/: __init__.py  dashboard_data_loader.py  dashboard_state_init.py  data_access.py  state.py  utils.py
agent/orchestrator/: __init__.py  curator_actions.py  curator_actions_validation.py  curator_agent.py  engine.py  (+8 more)
(+3694 files in other folders)
