[project]
name = "sim-ai-agent"
version = "0.1.0"
description = "Sim.ai PoC Agent with ACE, LiteLLM routing, Opik tracing, and ChromaDB"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.3.0",
    "anthropic>=0.75.0",
    "fastapi>=0.124.0",
    "mcp>=1.24.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0.0",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.0",
    "opik>=1.9.0",
    "litellm>=1.50.0",
    "httpx>=0.28.0",
    "ace-framework[observability]>=0.1.0",
]
